About Us Script added

--- a/about-us.html
+++ b/about-us.html
@@ -26,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="test">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                         </li>
@@ -62,48 +62,88 @@
         <iframe
             src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1Gj5ENNPHGdSXzerUuT46mWJfVSENAJweOG5pPz5-h8k&font=Default&lang=en&initial_zoom=2&height=650'
             width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+        <hr class="bg-light">
+    </div>
+
+    <!--Chart created using the Chart.js framework-->
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 text-center rounded bg-light">
+                <canvas id="myChart"></canvas>
+                <hr class="bg-light">
+            </div>
+            <div class="col-lg-6 text-center">
+                <h6 class="display-6 page-title p-2 m-2">Customer Satisfaction Survey</h6>
+                <h4 class="p-2 text-light m-2 sub-title">YOUR FEEDBACK IS EVERYTHING FOR US</h4>
+                <h4 class="p-2 text-light m-2 sub-title">THESE ARE THE RESULTS FROM OUR RECENT CUSTOMER SURVEY</h4>
+            </div>
+        </div>
     </div>
 
     <!--Body of Page-->
-    <main>
+    <main><br>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-lg-6">
                     <h5 class="display-6 page-title p-2 m-2">About King's Restaurant</h5>
                     <h4 class="p-2 text-light m-2 sub-title">EAT GOOD, DO GOOD</h4>
                     <hr class="text-light">
-                    <p class="text-light p-2 about-us">Great food served with a good wine, cold beer, or coffee in a beautiful space with great music playing is our passion.<br> Seasonally, we change our menus to include fresh produce from our local suppliers. We work with some of the best small producers and importers globally, and they never cease to amaze us with their ability to find the best wines of the season.<br> Keeping our menu fresh and exciting is a priority for us. We look after this famous Joycean structure, which we lovingly renovated in 2005. There are some great classics, indie favourites, a lot of Bowie, and the best emerging new talent on our music playlist. So, whether it's a lazy breakfast, brunch, lunch with friends, dinner with family, or a special occasion, celebrate with us in this historic building, where you'll be treated to great music and friendly service, and most importantly, great food!</p>
+                    <p class="text-light p-2 about-us">Great food served with a good wine, cold beer, or coffee in a
+                        beautiful space with great music playing is our passion.<br> Seasonally, we change our menus to
+                        include fresh produce from our local suppliers. We work with some of the best small producers
+                        and importers globally, and they never cease to amaze us with their ability to find the best
+                        wines of the season.<br> Keeping our menu fresh and exciting is a priority for us. We look after
+                        this famous Joycean structure, which we lovingly renovated in 2005. There are some great
+                        classics, indie favourites, a lot of Bowie, and the best emerging new talent on our music
+                        playlist. So, whether it's a lazy breakfast, brunch, lunch with friends, dinner with family, or
+                        a special occasion, celebrate with us in this historic building, where you'll be treated to
+                        great music and friendly service, and most importantly, great food!</p>
                 </div>
                 <div class="col-lg-6">
-                    <div class="pic1"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="pic2"></div>
-                </div>
-                <div class="col-lg-6">
-                    <h4 class="pt-5 text-light m-2 sub-title">INGREDIENTS OF THE HIGHEST QUALITY</h4>
-                    <hr class="text-light">
-                    <p class="text-light p-2 about-us">All of our food is prepared fresh to order with only the finest ingredients.
-                        Our talented Chefs make every parfait, soup, sauce, chutney, and jam in-house.
-                        Our mornings begin before the door even opens, with hand-cut smoked artisan bacon in our famous Full Irish Breakfast or Eggs Benedict with our homemade Hollandaise sauce, to our home roasted granola.<br>
-                        Lunchtime favourites include the fresh Seafood Chowder with a hint of saffron and dill, as well as the Clonakilty Black Pudding & Spanish Chorizo Salad, which will make your mouth water.
-                        You'd wonder if the chefs had a second to spare with our dinner menu, which offers the same level of attention to detail.<br>We know how to complement the best Irish produce, from mature Cashel Blue Cheese on our O'Mahony's dry-aged beef to the milder Crozier blue on our fresh pasta.
-                        Our dessert menu caters to both sweet and savoury palates, with homemade bread & butter pudding and seasonal fruit crumble, as well as a selection of nearly 20 mature cheeses served with our fig and apple chutney.</p>
-
+                    <div class="pic1 animation"></div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h4 class="pt-5 text-light m-2 sub-title">DRINKS WITH FRIENDS</h4>
-                    <p class="text-light p-2 about-us">We work with some of the best small producers and importers globally, and they never cease to amaze us with their ability to find the best wines of the season, keeping our menu fresh and exciting.
-                        While the sight of a freshly settled pint of Guinness is comforting, we also have Carlsberg for our lager fans, as well as a mouth-watering selection of bottled craft beer.<br>The best excuse in the world to end the week with a bottle of crisp Prosecco is our Friday Fizz event.
-                        If you're a coffee connoisseur, we have one of the best single-origin roasts in the country. Michael Kelly of Ashbourne produces Ariosa Coffee, which is slow roasted in small batches for the best flavour and aroma.<br>So why not join us to sample our carefully selected drinks and perhaps sample our famous cheese selection of over 20 mature cheeses accompanied by our homemade apple and fig chutney.</p>
-                    <hr class="text-light">
+                    <div class="pic2 animation"></div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="pic3"></div>
+                    <h4 class="text-light m-2 sub-title">INGREDIENTS OF THE HIGHEST QUALITY</h4>
+                    <hr class="text-light">
+                    <p class="text-light p-2 about-us">All of our food is prepared fresh to order with only the finest
+                        ingredients. Our talented Chefs make every parfait, soup, sauce, chutney, and jam in-house.<br>
+                        Our mornings begin before the door even opens, with hand-cut smoked artisan bacon in our famous
+                        Full Irish Breakfast or Eggs Benedict with our homemade Hollandaise sauce, to our home roasted
+                        granola.<br>
+                        Lunchtime favourites include the fresh Seafood Chowder with a hint of saffron and dill, as well
+                        as the Clonakilty Black Pudding & Spanish Chorizo Salad, which will make your mouth water.
+                        You'd wonder if the chefs had a second to spare with our dinner menu, which offers the same
+                        level of attention to detail.<br>We know how to complement the best Irish produce, from mature
+                        Cashel Blue Cheese on our O'Mahony's dry-aged beef to the milder Crozier blue on our fresh
+                        pasta.
+                        Our dessert menu caters to both sweet and savoury palates, with homemade bread & butter pudding
+                        and seasonal fruit crumble, as well as a selection of nearly 20 mature cheeses served with our
+                        fig and apple chutney.</p>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h4 class="text-light m-2 sub-title">DRINKS WITH FRIENDS</h4>
+                    <hr class="text-light">
+                    <p class="text-light p-2 about-us">We work with some of the best small producers and importers
+                        globally, and they never cease to amaze us with their ability to find the best wines of the
+                        season, keeping our menu fresh and exciting.
+                        While the sight of a freshly settled pint of Guinness is comforting, we also have Carlsberg for
+                        our lager fans, as well as a mouth-watering selection of bottled craft beer.<br>The best excuse
+                        in the world to end the week with a bottle of crisp Prosecco is our Friday Fizz event.
+                        If you're a coffee connoisseur, we have one of the best single-origin roasts in the country.
+                        Michael Kelly of Ashbourne produces Ariosa Coffee, which is slow roasted in small batches for
+                        the best flavour and aroma.<br>So why not join us to sample our carefully selected drinks and
+                        perhaps sample our famous cheese selection of over 20 mature cheeses accompanied by our homemade
+                        apple and fig chutney.</p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="pic3 animation"></div>
                 </div>
             </div>
         </div>
@@ -164,10 +204,14 @@
     <!--jQuery CDN-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <!--JavaScript Script-->
-    <script src="script.js"></script>
+    <!--Chart.js CDN-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.js"
+        integrity="sha512-opXrgVcTHsEVdBUZqTPlW9S8+99hNbaHmXtAdXXc61OUU6gOII5ku/PzZFqexHXc3hnK8IrJKHo+T7O4GRIJcw=="
+        crossorigin="anonymous"></script>
     <!--Font Awesome CDN-->
     <script src="https://kit.fontawesome.com/5bdb480a77.js" crossorigin="anonymous"></script>
+    <!--JS Script-->
+    <script src="about-us-script.js"></script>
 </body>
 
 </html>
