--- a/about-us.html
+++ b/about-us.html
@@ -57,27 +57,11 @@
         </nav>
     </div>
 
-    <!--Restaurant Timeline Using Timeline Js-->
+    <!--Restaurant Timeline Using Timeline.js-->
     <div class="container-fluid rounded">
         <iframe
             src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1Gj5ENNPHGdSXzerUuT46mWJfVSENAJweOG5pPz5-h8k&font=Default&lang=en&initial_zoom=2&height=650'
             width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
-        <hr class="bg-light">
-    </div>
-
-    <!--Chart created using the Chart.js framework-->
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 text-center rounded bg-light">
-                <canvas id="myChart"></canvas>
-                <hr class="bg-light">
-            </div>
-            <div class="col-lg-6 text-center">
-                <h6 class="display-6 page-title p-2 m-2">Customer Satisfaction Survey</h6>
-                <h4 class="p-2 text-light m-2 sub-title">YOUR FEEDBACK IS EVERYTHING FOR US</h4>
-                <h4 class="p-2 text-light m-2 sub-title">THESE ARE THE RESULTS FROM OUR RECENT CUSTOMER SURVEY</h4>
-            </div>
-        </div>
     </div>
 
     <!--Body of Page-->
@@ -100,12 +84,36 @@
                         great music and friendly service, and most importantly, great food!</p>
                 </div>
                 <div class="col-lg-6">
-                    <div class="pic1 animation"></div>
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="pic1"></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="pic2"></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="pic3"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <div class="pic2 animation"></div>
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="pic4"></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="pic5"></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="pic6"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-6">
                     <h4 class="text-light m-2 sub-title">INGREDIENTS OF THE HIGHEST QUALITY</h4>
@@ -143,7 +151,33 @@
                         apple and fig chutney.</p>
                 </div>
                 <div class="col-lg-6">
-                    <div class="pic3 animation"></div>
+                    <div class="carousel slide carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="pic7"></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="pic8"></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="pic9"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><br>
+        <!--Chart created using the Chart.js-->
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 text-center rounded bg-light">
+                    <canvas id="myChart"></canvas>
+                </div>
+                <div class="col-lg-6 text-center">
+                    <h6 class="display-6 page-title p-2 m-2">Customer Satisfaction Survey</h6>
+                    <h4 class="p-2 text-light m-2 sub-title">YOUR FEEDBACK IS EVERYTHING FOR US!</h4>
+                    <h4 class="p-2 text-light m-2 sub-title">THESE ARE THE RESULTS FROM OUR RECENT CUSTOMER SURVEY</h4>
+                    <h6 class="p-2 text-light m-2 sub-title">YOU CAN HOVER TO SEE MORE DETAILS</h6>
                 </div>
             </div>
         </div>
@@ -189,8 +223,7 @@
                 </div>
                 <div class="row mt-5 text-center">
                     <div class="col copyright">
-                        <p class=""><small class="text-white-50">© 2021 Copyright: Danrlei Martins. All Rights
-                                Reserved.</small></p>
+                        <p class=""><small class="text-white-50">© 2021 Copyright: Danrlei Martins. All Rights Reserved.</small></p>
                     </div>
                 </div>
             </div>
