--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <!--Navbar-->
+    <!--Navbar - Bootstrap-->
     <div>
         <nav class="navbar fixed-top navbar-expand-lg bg-dark">
             <div class="container-fluid">
@@ -57,20 +57,66 @@
         </nav>
     </div>
 
-    <!--Restaurant Timeline Using Timeline.js-->
+    <!--Restaurant Timeline - Timeline.js-->
     <div class="container-fluid rounded">
         <iframe
             src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1Gj5ENNPHGdSXzerUuT46mWJfVSENAJweOG5pPz5-h8k&font=Default&lang=en&initial_zoom=2&height=650'
             width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
     </div>
 
-    <!--Body of Page-->
+    <!--Body of Page - Bootstrap, Chart.js & Anime.js-->
     <main><br>
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <h5 class="display-6 page-title p-2 m-2">About King's Restaurant</h5>
-                    <h4 class="p-2 text-light m-2 sub-title">EAT GOOD, DO GOOD</h4>
+                    <h4 class="p-2 text-light m-2 sub-title">EAT GOOD, DO GOOD
+                        <!--Animated Squares-->
+                        <table class="d-flex justify-content-sm-end">
+                            <tr>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                                <td>
+                                    <div class="square"></div>
+                                </td>
+                            </tr>
+                        </table>
+                    </h4>
                     <hr class="text-light">
                     <p class="text-light p-2 about-us">Great food served with a good wine, cold beer, or coffee in a
                         beautiful space with great music playing is our passion.<br> Seasonally, we change our menus to
@@ -116,7 +162,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h4 class="text-light m-2 sub-title">INGREDIENTS OF THE HIGHEST QUALITY</h4>
+                    <h4 class="p-2 text-light m-2 sub-title">INGREDIENTS OF THE HIGHEST QUALITY</h4>
                     <hr class="text-light">
                     <p class="text-light p-2 about-us">All of our food is prepared fresh to order with only the finest
                         ingredients. Our talented Chefs make every parfait, soup, sauce, chutney, and jam in-house.<br>
@@ -136,7 +182,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h4 class="text-light m-2 sub-title">DRINKS WITH FRIENDS</h4>
+                    <h4 class="p-2 text-light m-2 sub-title">DRINKS WITH FRIENDS</h4>
                     <hr class="text-light">
                     <p class="text-light p-2 about-us">We work with some of the best small producers and importers
                         globally, and they never cease to amaze us with their ability to find the best wines of the
@@ -183,7 +229,7 @@
         </div>
     </main>
 
-    <!--Footer-->
+    <!--Footer - Bootstrap & Font Awesome-->
     <footer class="bg-dark">
         <div class="mt-5 pt-5 pb-5 footer bg-dark" id="footer">
             <div class="container">
@@ -223,7 +269,8 @@
                 </div>
                 <div class="row mt-5 text-center">
                     <div class="col copyright">
-                        <p class=""><small class="text-white-50">© 2021 Copyright: Danrlei Martins. All Rights Reserved.</small></p>
+                        <p class=""><small class="text-white-50">© 2021 Copyright: Danrlei Martins. All Rights
+                                Reserved.</small></p>
                     </div>
                 </div>
             </div>
@@ -240,6 +287,10 @@
     <!--Chart.js CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.2.0/chart.js"
         integrity="sha512-opXrgVcTHsEVdBUZqTPlW9S8+99hNbaHmXtAdXXc61OUU6gOII5ku/PzZFqexHXc3hnK8IrJKHo+T7O4GRIJcw=="
+        crossorigin="anonymous"></script>
+    <!--Anime.js CDN-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"
+        integrity="sha512-z4OUqw38qNLpn1libAN9BsoDx6nbNFio5lA6CuTp9NlK83b89hgyCVq+N5FdBJptINztxn1Z3SaKSKUS5UP60Q=="
         crossorigin="anonymous"></script>
     <!--Font Awesome CDN-->
     <script src="https://kit.fontawesome.com/5bdb480a77.js" crossorigin="anonymous"></script>
