--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@
                                 <div class="row">
                                     <div class="col-lg-12 col-md-9 col-sm-9 col-xs-12">
                                         <div class="dish-content text-center">
-                                            <h5 class="dish-title" id="finalBill">Total Bill: € </h5><br>
-                                            <h5 class="dish-title" id="startersBill">Starters: € </h5><br>
-                                            <h5 class="dish-title" id="mainCoursesBill">Main Courses: €</h5><br>
-                                            <h5 class="dish-title" id="dessertsBill">Desserts: €</h5><br>
-                                            <h5 class="dish-title" id="drinksBill">Drinks: €</h5><br>
-                                            <h5 class="dish-title" id="vegBill">Vegetarian: €</h5><br>
-                                            <h5 class="dish-title" id="nonvegBill">Non-Vegetarian: € </h5>
+                                            <h5 class="dish-title" id="finalBill">Total Bill:</h5><br>
+                                            <h5 class="dish-title" id="startersBill">Starters: </h5><br>
+                                            <h5 class="dish-title" id="mainCoursesBill">Main Courses:</h5><br>
+                                            <h5 class="dish-title" id="dessertsBill">Desserts:</h5><br>
+                                            <h5 class="dish-title" id="drinksBill">Drinks:</h5><br>
+                                            <h5 class="dish-title" id="vegBill">Vegetarian:</h5><br>
+                                            <h5 class="dish-title" id="nonvegBill">Non-Vegetarian:</h5>
                                         </div>
                                     </div>
                                 </div>
