--- a/about-us.html
+++ b/about-us.html
@@ -38,16 +38,16 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#starters">Starters</a></li>
-                                <li><a class="dropdown-item" href="#main-courses">Main Courses</a></li>
-                                <li><a class="dropdown-item" href="#desserts">Desserts</a></li>
-                                <li><a class="dropdown-item" href="#drinks">Drinks</a></li>
+                                <li><a class="dropdown-item" href="./index.html">Starters</a></li>
+                                <li><a class="dropdown-item" href="./index.html">Main Courses</a></li>
+                                <li><a class="dropdown-item" href="./index.html">Desserts</a></li>
+                                <li><a class="dropdown-item" href="./index.html">Drinks</a></li>
                             </ul>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="#footer">Contact Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#staff_pass">Staff Login</a>
+                            <a class="nav-link" href="./index.html">Staff Login</a>
                         </li>
                         </li>
                     </ul>
